# pqcr

./: .gitignore  CMakeLists.txt  Makefile  testvec-hashes.txt
include/djbsort/: README
include/pkpsig/: api_common.h  api_unified.h  keys.h  modulo.h  paramset.h  permute.h  sigstate.h  sort.h  symmetric.h  zkpshamir.h
include/pqcr/: modulo.h  sign_api_simple.h  vectenc.h
include/spx/: paramset.h
include/xoesch/: xoesch.h
scripts/: generate-all-test-vectors  hash-all-test-vectors
src/pkpsig/: README  api_common.c  api_unified.c  api_unified.h  keys.h  keys_core.c  keys_fingerprint.c  keys_generate.c  keys_internal.h  keys_math.c  keys_unpack.c  paramset.c  paramset.h  paramset_list.h  permute.c  pkps-api_common.c  pkps-api_unified.c  pkps-modulo.c  pkps-paramset.c  pkps-randombytes.c  pkps-sort_int32.c  pkps-symmetric_shake256.c  pkps-symmetric_xoodyak.c  pkps-zkpshamir.c  randombytes.c  randombytes.h  signatures.c  signatures.h  sigstate.c  sort_blob.c  sort_minmax_blob.h  symmetric_core.c  symmetric_endian.h  symmetric_internal.h  symmetric_shake256.c  symmetric_shake_openssl.c  symmetric_shake_xkcp.c  symmetric_xoesch256.c  symmetric_xoesch384.c  vectenc.h  (+1 more)
src/pqcr/: modulo.c  sign_api_simple.c  vectenc.c
src/spx/: paramset.c
src/test/: drbg.c  drbg.h  generate-test-vectors.c  randombytes_shake256_deterministic.c  randombytes_shake256_deterministic.h
src/util/: pkpsig-list-paramsets.c
src/xoesch/: xoesch.c
